# crm-fast-api

./: README.md  alembic.ini  main.py  pyproject.toml
app/api/: deps.py
app/api/v1/: api.py  auth.py
app/core/: config.py  security.py
app/db/: base.py  base_class.py  session.py
app/models/: user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: fbaf80ae131a_create_users_table.py
